manifests-different-namespace/network-policies/allow-egress-to-aaw-fc.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-employee-egress-to-aaw-fc-debug
  namespace: collin-brown
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    - port: 22
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: aaw-fc
  podSelector: {}
  policyTypes:
  - Egress
