manifests-different-namespace/network-policies/allow-ingress-from-collin-brown.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-collin-brown-debug
  namespace: aaw-fc
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: collin-brown
    ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    - port: 22
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
